--- a/micro_content_manager/templates/micro_content_manager/create.html
+++ b/micro_content_manager/templates/micro_content_manager/create.html
@@ -1,59 +1,16 @@
 {% load static %}
 <!DOCTYPE html>
-<style>
 
-     .box {
-        border-style: solid;
-        border-color: black;
-        border-width: 5px;
-        text-align: center;
-     }
 
-    .option-font{
-        font-palette: light;
-        font-size: 15px;
-    }
-    #full-container {
-        margin-left: 450px;
-    }
-
-    .button {
-        font: bold 11px Arial;
-        text-decoration: none;
-        background-color: #EEEEEE;
-        color: #333333;
-        padding: 2px 6px 2px 6px;
-        border-top: 1px solid #CCCCCC;
-        border-right: 1px solid #333333;
-        border-bottom: 1px solid #333333;
-        border-left: 1px solid #CCCCCC;
-        cursor: pointer;
-    }
-     .blue-box {
-        background-color: rgba(92,114,250,0.81);
-        color: #fff;
-        margin: 20px 1200px 20px 10px ;
-        padding: 0.6em;
-        cursor: pointer;
-         text-align: center;
-    }
-    .delete-box {
-        background-color: red;
-        color: #fff;
-        margin: 20px 1200px 20px 10px ;
-        padding: 0.6em;
-        cursor: pointer;
-         text-align: center;
-    }
-
-</style>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-    <title>Create Micro content</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+    <title>Create Micro Content</title>
 </head>
-<body>
+<body class="bg-study">
 
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script>
@@ -86,11 +43,11 @@
                     $("#newQuestions-container").append("<div id=\"q"+id+"\" >");
 
                      $("#q"+id).append("<p>Question "+$("#idQuestions").val()+": <textarea name=\"question"+$("#idQuestions").val()+"\" rows=\"1\"\n" +
-                         "                                                             cols=\"80\"></textarea><span id=\"deleteq"+$("#idQuestions").val()+"\" class=\"button delete-box\">Delete</span></p></p>");
+                         "                                                             cols=\"80\"></textarea><span id=\"deleteq"+$("#idQuestions").val()+"\" class=\"button red delete-box\">Delete question</span></p></p>");
                      $("#q"+id).append("<p>Choices "+$("#idQuestions").val()+" (write the possible answers and select the correct one):</p>\n");
                      $("#q"+id).append("  {% for c in choices %}\n"+
                          "                    <p>\n"+
-                         "                        <input type=\"radio\" name=\"answer"+$("#idQuestions").val()+"\"\n"
+                         "                        <input class=\"choice\"  type=\"radio\" name=\"answer"+$("#idQuestions").val()+"\"\n"
                          +
                          "                               value=\"choice"+$("#idQuestions").val()+"_{{ forloop.counter }}\"\n"
                          +
@@ -98,83 +55,100 @@
                          "                        <input type=\"text\" name=\"choice"+$("#idQuestions").val()+"_{{ forloop.counter }}\">\n"
                          +
                          "                    </p>\n"+
-                         "                {% endfor %}");
+                         "                {% endfor %}<br>");
 
 
                         $("#q"+id).append("<p>Explanation "+$("#idQuestions").val()+": <textarea name=\"explanation"+$("#idQuestions").val()+"\" rows=\"1\"\n" +
-                                 "                                                                cols=\"100\"></textarea></p></div>");
+                                 "                                                                cols=\"100\"></textarea></p></div><br><br>");
                      document.getElementById("deleteq"+id).addEventListener("click", deleteQuestion, false);
          }
        </script>
 
 
-    <div id="full-container">
+    <div class="body">
         <h1>Micro-learning contents generator</h1>
-        <p><a class="button" href="{%  url 'user_page'%}">Go home</a></p>
-      <form action="{% url 'micro_content_manager:store' nQuestions %}" method="post">
+      <form action="{% url 'micro_content_manager:store' nQuestions %}" method="post" class="sky-form">
             {% csrf_token %}
-            <h2>Content</h2>
-            <p><label for="title">Title: <input type="text" placeholder="Title" name="title"></label></p>
-            <p>Tags: <input type="text" name="mc_tags">
-             (Tags must be inserted separated by blank spaces (e.g., Tag1 Tag2 Tag3))</p>
-            {% for p in paragraphs %}
-                <p>Paragraph {{ forloop.counter }}:<textarea name="paragraph{{ forloop.counter }}" rows="1" cols="100"></textarea></p>
-            {% endfor %}
-            <h2>Videos</h2>
-            {% for v in videos %}
-                <h4>Video {{ forloop.counter }}</h4>
-                <p>URL:<input name="videoURL{{ forloop.counter }}" type="url"></p>
-                <p>Format:
-                    <select name="videoFormat{{ forloop.counter }}">
-                        <option value="mp4" selected>mp4</option>
-                        <option value="ogg">ogg</option>
-                    </select>
-                </p>
-                <p>Upload form:
-                    <select name="video_upload_form{{ forloop.counter }}">
-                        <option value="from_existing_file" selected>From existing file</option>
-                        <option value="link_from_youtube">Link from YouTube</option>
-                        <option value="download_from_youtube">Download from Youtube</option>
-                        <option value="external_repository">From external repository</option>
-                    </select>
-                </p>
-            {% endfor %}
+            <div class="white">
+                <h2>Content</h2>
+                <fieldset>
 
-                <h2>Quiz</h2>
-                <div id="addQuestion-container">
-                    <h5 id="addQuestion" class="button blue-box">Add Question</h5>
-                </div>
-
-            <div id="questions-container">
-            {% for q in questions %}
-
-                <div id="q{{ forloop.counter }}">
-                    <p>Question {{ forloop.counter }}: <textarea name="question{{ forloop.counter }}" rows="1"
-                                                                 cols="80"></textarea><span id="deleteq{{ forloop.counter }}" class="button delete-box">Delete</span></p>
-                    <p>Choices {{ forloop.counter }} (write the possible answers and select the correct one):</p>
-                    {% for c in choices %}
-                        <p>
-                            <input type="radio" name="answer{{ forloop.parentloop.counter }}"
-                                   value="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}"
-                                   {% if forloop.counter == 1 %}checked {% endif %}>
-                            <input type="text" name="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}">
-                        </p>
+                    <section><p><label for="title">Title: <input type="text" placeholder="Title" name="title"></label></p></section>
+                    <section><p>Tags: <input type="text" name="mc_tags">
+                     (Tags must be inserted separated by blank spaces (e.g., Tag1 Tag2 Tag3))</p></section>
+                    {% for p in paragraphs %}
+                        <section><p>Paragraph {{ forloop.counter }}:<textarea name="paragraph{{ forloop.counter }}" rows="1" cols="100"></textarea></p></section>
                     {% endfor %}
+                </fieldset>
+                <fieldset>
+                    <h2>Videos</h2>
+                    {% for v in videos %}
+                        <section><h4>Video {{ forloop.counter }}</h4></section>
+                        <section><p>URL:<input name="videoURL{{ forloop.counter }}" type="url"></p></section>
+                        <section><p>Format:
+                            <select name="videoFormat{{ forloop.counter }}">
+                                <option value="mp4" selected>mp4</option>
+                                <option value="ogg">ogg</option>
+                            </select>
+                        </p>
+                        </section>
+                        <section>
+                        <p>Upload form:
+                            <select name="video_upload_form{{ forloop.counter }}">
+                                <option value="from_existing_file" selected>From existing file</option>
+                                <option value="link_from_youtube">Link from YouTube</option>
+                                <option value="download_from_youtube">Download from Youtube</option>
+                                <option value="external_repository">From external repository</option>
+                            </select>
+                        </p></section>
+                    {% endfor %}
+                </fieldset>
 
-                    <p>Explanation {{ forloop.counter }}: <textarea name="explanation{{ forloop.counter }}" rows="1"
-                                                                 cols="100"></textarea></p>
-                </div>
-            {% endfor %}
+                <fieldset>
+
+                            <div id="addQuestion-container">
+                                <h2>Quiz</h2>
+                                <h5 id="addQuestion" class="button green">Add Question</h5>
+                            </div>
+                        <br><br><br><br>
+
+
+                        <div id="questions-container">
+                        {% for q in questions %}
+
+                            <div id="q{{ forloop.counter }}">
+                                <p>Question {{ forloop.counter }}: <textarea name="question{{ forloop.counter }}" rows="1"
+                                                                             cols="80"></textarea><span id="deleteq{{ forloop.counter }}" class="button red delete-box" style="text-indent: 10px;">Delete question</span></p>
+                                <div style="margin-left: 100px;">
+                                    <p>Choices {{ forloop.counter }} (write the possible answers and select the correct one):</p>
+                                    {% for c in choices %}
+                                        <p>
+                                            <input type="radio" name="answer{{ forloop.parentloop.counter }}"
+                                                   value="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}"
+                                                   {% if forloop.counter == 1 %}checked {% endif %}>
+                                            <input type="text" name="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}">
+                                        </p>
+                                    {% endfor %}
+                                </div>
+                                <br>
+                                <p>Explanation {{ forloop.counter }}: <textarea name="explanation{{ forloop.counter }}" rows="1"
+                                                                             cols="100"></textarea></p>
+                                <br><br>
+
+                            </div>
+                        {% endfor %}
+                        </div>
+
+                        <input type="hidden" id="idQuestions" name="idQuestions" value={{ nQuestions }}>
+                        <div id="newQuestions-container">
+
+                        </div>
+
+                        <input type="hidden" id="author" name="author" value={{ user.username }}>
+                        <input type="hidden" id="creation_type" name="creation_type" value="own creation">
+                        <input class="button" type="submit" value="Create" style="background-color: green; margin: 0px 300px 100px 0px;">
+            </fieldset>
             </div>
-
-            <input type="hidden" id="idQuestions" name="idQuestions" value={{ nQuestions }}>
-            <div id="newQuestions-container">
-
-            </div>
-
-            <input type="hidden" id="author" name="author" value={{ user.username }}>
-            <input type="hidden" id="creation_type" name="creation_type" value="own creation">
-            <input type="submit" value="Create micro-learning content">
         </form>
 
     </div>
