--- a/micro_content_manager/templates/micro_content_manager/edit.html
+++ b/micro_content_manager/templates/micro_content_manager/edit.html
@@ -4,9 +4,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Edit</title>
+    <title>Edit Micro Content</title>
       <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
 </head>
 <body class="bg-study">
 
@@ -41,7 +41,7 @@
                     $("#newQuestions-container").append("<div id=\"q"+id+"\" >");
 
                      $("#q"+id).append("<p>Question "+$("#idQuestions").val()+": <textarea name=\"question"+$("#idQuestions").val()+"\" rows=\"1\"\n" +
-                         "                                                             cols=\"80\"></textarea><span id=\"deleteq"+$("#idQuestions").val()+"\" class=\"button red delete-box\" >Delete question "+$("#idQuestions").val()+" </span></p></p>");
+                         "                                                             cols=\"80\"></textarea><span id=\"deleteq"+$("#idQuestions").val()+"\" class=\"button red delete-box\" >Delete question </span></p></p>");
                      $("#q"+id).append("<p>Choices "+$("#idQuestions").val()+" (write the possible answers and select the correct one):</p>\n");
 
                      $("#q"+id).append("  {% for c in "   " %}\n"+
@@ -54,11 +54,11 @@
                          "                        <input type=\"text\" name=\"choice"+$("#idQuestions").val()+"_{{ forloop.counter }}\">\n"
                          +
                          "                    </p>\n"+
-                         "                {% endfor %}");
+                         "                {% endfor %}<br>");
 
 
                         $("#q"+id).append("<p>Explanation "+$("#idQuestions").val()+": <textarea name=\"explanation"+$("#idQuestions").val()+"\" rows=\"1\"\n" +
-                                 "                                                                cols=\"100\"></textarea></p></div>");
+                                 "                                                                cols=\"100\"></textarea></p></div><br><br>");
                      document.getElementById("deleteq"+id).addEventListener("click", deleteQuestion, false);
          }
        </script>
@@ -73,21 +73,19 @@
                 <h2>Content</h2>
                     <input type="hidden" name="id" value="{{ id }}">
                     <fieldset>
-                    <section> <p>Title: <input type="text" name="title" value="{{ content.title }}" required></p></section>
-                    <section>  <p>Tags:<input type="text" name="mc_tags" value="{{mc_tags}}" required>
-                      Tags must be inserted separated by blank spaces (e.g., Tag1 Tag2 Tag3)</p></section>
+                        <section> <p>Title: <input type="text" name="title" value="{{ content.title }}" required></p></section>
+                        <section> <p>Tags:<input type="text" name="mc_tags" value="{{mc_tags}}" required>
+                          Tags must be inserted separated by blank spaces (e.g., Tag1 Tag2 Tag3)</p></section>
 
-                    <section> {% for p in content.text %}
-                        <p>Paragraph {{ forloop.counter }}:<textarea name="paragraph{{ forloop.counter }}" rows="1"
-                                                                     cols="100">{{ p }}</textarea></p>
-                    {% endfor %}</section>
-
-
+                         {% for p in content.text %}
+                            <section><p>Paragraph {{ forloop.counter }}:<textarea name="paragraph{{ forloop.counter }}" rows="1"
+                                                                         cols="100">{{ p }}</textarea></p></section>
+                        {% endfor %}
                     </fieldset>
 
                     <fieldset>
                         <h2>Videos </h2>
-                    {% for v in content.videos %}
+                        {% for v in content.videos %}
                         <section>Video {{ forloop.counter }}</section>
                         <section>URL:<input name="videoURL{{ forloop.counter }}" type="url" value="{{ v.url }}" style="width: 500px;"></section>
                         <section>Format:<select name="videoFormat{{ forloop.counter }}">
@@ -101,16 +99,16 @@
                             <option value="download_from_youtube" {% if v.upload_form == 'download_from_youtube' %} selected {% endif %}>Download from Youtube</option>
                             <option value="external_repository" {% if v.upload_form == 'external_repository' %} selected {% endif %}>From external repository</option>
                         </select></section>
-                    {% endfor %}
-
+                        {% endfor %}
                     </fieldset>
+
                     <fieldset>
 
                                 <div id="addQuestion-container">
                                     <h2>Quiz </h2>
                                     <h5 id="addQuestion" class="button green">Add Question</h5>
                                 </div>
-                                <br><br><br>
+                                <br><br><br><br>
 
 
                             <div id="questions-container">
@@ -121,7 +119,7 @@
 
 
                                         <p>Question {{ forloop.counter }}: <textarea name="question{{ forloop.counter }}" rows="1"
-                                                                                     cols="100">{{ q.question }}</textarea><span id="deleteq{{ forloop.counter }}" class="button red delete-box">Delete question {{ forloop.counter }}</span></p>
+                                                                                     cols="100">{{ q.question }}</textarea><span id="deleteq{{ forloop.counter }}" class="button red delete-box">Delete question</span></p>
 
                                         <div style="margin-left: 100px;">
                                             Choices {{ forloop.counter }} (write the possible answers and select the correct one):<br>
@@ -133,6 +131,7 @@
                                                 <input type="text" name="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}" value={{ choice }}>    <br>
                                            {% endfor %}
                                         </div>
+                                        <br>
                                         <p>Explanation {{ forloop.counter }}: <textarea name="explanation{{ forloop.counter }}" rows="1"
                                                                                         cols="100">{{ q.explanation }}</textarea></p>
                                         <br><br>
