--- a/micro_content_manager/templates/micro_content_manager/webcam_record.html
+++ b/micro_content_manager/templates/micro_content_manager/webcam_record.html
@@ -1,11 +1,5 @@
+{% load static %}
 <script>window.demoVersion = '2019.01.20';</script>
-
-<!--
-> Muaz Khan     - www.MuazKhan.com
-> MIT License   - www.WebRTC-Experiment.com/licence
-> Documentation - github.com/muaz-khan/RecordRTC
-> and           - RecordRTC.org
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,7 +11,6 @@
     <link rel="author" type="text/html" href="https://plus.google.com/+MuazKhan">
     <meta name="author" content="Muaz Khan">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
     <link rel="stylesheet" href="https://cdn.webrtc-experiment.com/style.css">
 
     <style>
@@ -32,14 +25,17 @@
         }
 
         h1 span {
-            background: yellow;
+            background: grey;
             border: 2px solid #8e1515;
             padding: 2px 8px;
             margin: 2px 5px;
             border-radius: 7px;
-            color: #8e1515;
+            color: white;
             display: inline-block;
         }
+
+
+
 
         .recordrtc button {
             font-size: inherit;
@@ -98,101 +94,115 @@
     <!-- video element -->
     <link href="https://cdn.webrtc-experiment.com/getHTMLMediaElement.css" rel="stylesheet">
     <script src="https://cdn.webrtc-experiment.com/getHTMLMediaElement.js"></script>
+        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
 </head>
 
-<body>
-    <article>
-        <header style="text-align: center;">
-            <h1>
-                Audio+Video Recording
-            </h1>
-        </header>
+<body class="bg-study">
+<article>
 
-        <!--
-        <section style="margin: 20px; text-align: center; color: red;">
-            <small id="demoVersion"></small>
-            <script>var date=new Date(window.demoVersion),month=date.toLocaleString("en-us",{month:"long"}),day=date.getUTCDate();day.toString().length<=9&&(day=day.toString().length == 1 ? "0"+day : day);var year=date.getUTCFullYear(); document.getElementById("demoVersion").innerHTML="Last Updated On: <time>"+month+" "+day+" "+year+"</time>";</script>
-        </section>
-        -->
+    <div class="body">
 
-        <section class="experiment recordrtc">
-            <h2 class="header" style="margin: 0;">
-                <select class="recording-media">
-                    <option value="record-audio-plus-video">Microphone+Camera</option>
-                    <option value="record-audio">Microphone</option>
-                </select>
+            <header style="text-align: left;">
+                <h1>
+                    <span>Audio+Video Recording</span>
+                </h1>
+            </header>
+        <div class="sky-form">
+            <div class="white">
+                <fieldset>
+            <!--
+            <section style="margin: 20px; text-align: center; color: red;">
+                <small id="demoVersion"></small>
+                <script>var date=new Date(window.demoVersion),month=date.toLocaleString("en-us",{month:"long"}),day=date.getUTCDate();day.toString().length<=9&&(day=day.toString().length == 1 ? "0"+day : day);var year=date.getUTCFullYear(); document.getElementById("demoVersion").innerHTML="Last Updated On: <time>"+month+" "+day+" "+year+"</time>";</script>
+            </section>
+            -->
 
-                <span style="font-size: 15px;">into</span>
-
-                <select class="media-container-format">
-                    <option>default</option>
-                    <option>vp8</option>
-                    <option>vp9</option>
-                    <option>h264</option>
-                    <option>mkv</option>
-                    <option>opus</option>
-                    <option>ogg</option>
-                    <option>pcm</option>
-                    <option>gif</option>
-                    <option>whammy</option>
-                    <option>WebAssembly</option>
-                </select>
-
+            <section class="experiment recordrtc">
+                <h2 class="header" style="margin: 0;">
+                    <select class="recording-media">
+                        <option value="record-audio-plus-video">Microphone+Camera</option>
+                        <option value="record-audio">Microphone</option>
+                        <option value="record-screen">Full Screen</option>
+                        <option value="record-audio-plus-screen">Microphone+Screen</option>
+                    </select>
+                    <span style="font-size: 15px;">into</span>
+                    <select class="media-container-format">
+                        <option>default</option>
+                        <option>vp8</option>
+                        <option>vp9</option>
+                        <option>h264</option>
+                        <option>mkv</option>
+                        <option>opus</option>
+                        <option>ogg</option>
+                        <option>pcm</option>
+                        <option>gif</option>
+                        <option>whammy</option>
+                        <option>WebAssembly</option>
+                    </select>
+                    <br>
+                    <hr style="border-top: 0;border-bottom: 1px solid rgb(189, 189, 189);margin: 4px -12px;margin-top: 8px;">
+                    <select class="media-resolutions">
+                        <option value="default">Default resolutions</option>
+                        <option value="1920x1080">1080p</option>
+                        <option value="1280x720">720p</option>
+                        <option value="640x480">480p</option>
+                        <option value="3840x2160">4K Ultra HD (3840x2160)</option>
+                    </select>
+                    <select class="media-framerates">
+                        <option value="default">Default framerates</option>
+                        <option value="5">5 fps</option>
+                        <option value="15">15 fps</option>
+                        <option value="24">24 fps</option>
+                        <option value="30">30 fps</option>
+                        <option value="60">60 fps</option>
+                    </select>
+                    <select class="media-bitrates">
+                        <option value="default">Default bitrates</option>
+                        <option value="8000000000">1 GB bps</option>
+                        <option value="800000000">100 MB bps</option>
+                        <option value="8000000">1 MB bps</option>
+                        <option value="800000">100 KB bps</option>
+                        <option value="8000">1 KB bps</option>
+                        <option value="800">100 Bytes bps</option>
+                    </select>
+                </h2>
                 <br>
-
-                <hr style="border-top: 0;border-bottom: 1px solid rgb(189, 189, 189);margin: 4px -12px;margin-top: 8px;">
-                <select class="media-resolutions">
-                    <option value="default">Default resolutions</option>
-                    <option value="1920x1080">1080p</option>
-                    <option value="1280x720">720p</option>
-                    <option value="640x480">480p</option>
-                    <option value="3840x2160">4K Ultra HD (3840x2160)</option>
-                </select>
-
-                <select class="media-framerates">
-                    <option value="default">Default framerates</option>
-                    <option value="5">5 fps</option>
-                    <option value="15">15 fps</option>
-                    <option value="24">24 fps</option>
-                    <option value="30">30 fps</option>
-                    <option value="60">60 fps</option>
-                </select>
-
-                <select class="media-bitrates">
-                    <option value="default">Default bitrates</option>
-                    <option value="8000000000">1 GB bps</option>
-                    <option value="800000000">100 MB bps</option>
-                    <option value="8000000">1 MB bps</option>
-                    <option value="800000">100 KB bps</option>
-                    <option value="8000">1 KB bps</option>
-                    <option value="800">100 Bytes bps</option>
-                </select>
-            </h2>
-
-            <br>
-
-            <button id="btn-start-recording" style="font-size: 40px;">Start Recording</button>
-            <button id="btn-pause-recording" style="display: none; font-size: 15px;">Pause</button>
-
-            <div style="text-align: center; display: none;">
-                <button id="save-to-disk">Save To Disk</button>
-
-
-                <div style="margin-top: 10px;">
-                    <span id="signinButton" class="pre-sign-in">
-                      <span
-                        class="g-signin"
-                        data-callback="signinCallback"
-                        data-clientid="41556190767-115ifahd55lk4ln5pop4jus55cr4l7oh.apps.googleusercontent.com"
-                        data-cookiepolicy="single_host_origin"
-                        data-scope="https://www.googleapis.com/auth/youtube.upload https://www.googleapis.com/auth/youtube">
-                      </span>
-                    </span>
+                <button id="btn-start-recording" style="font-size: 40px; background-color: green!important;">Start Recording</button>
+                <button id="btn-pause-recording" style="display: none; font-size: 15px;">Pause</button>
+                <div style="text-align: center; display: none;">
+                    <button id="save-to-disk">Save To Disk</button>
+                    <div style="margin-top: 10px;">
+                        <span id="signinButton" class="pre-sign-in">
+                          <span
+                            class="g-signin"
+                            data-callback="signinCallback"
+                            data-clientid="41556190767-115ifahd55lk4ln5pop4jus55cr4l7oh.apps.googleusercontent.com"
+                            data-cookiepolicy="single_host_origin"
+                            data-scope="https://www.googleapis.com/auth/youtube.upload https://www.googleapis.com/auth/youtube">
+                          </span>
+                        </span>
+                    </div>
                 </div>
-            </div>
+                <div style="margin-top: 10px;" id="recording-player"></div>
+            </section>
 
-            <div style="margin-top: 10px;" id="recording-player"></div>
-        </section>
+            <div id="foot" style="text-align: center">
+                <span>
+                    Copyright © 2012-25 Muaz Khan<@muazkh>. @WebRTCWeb
+                </span>
+            </div>
+            <!--END OF THE HTML ELEMENTS (STRUCTURE OF THE PAGE)  -->
+                    </fieldset>
+                </div>
+        </div>
+    </div>
+
+
+
+
+
+
 
         <script>
             (function() {
@@ -245,7 +255,6 @@
                 buttons: ['full-screen'/*, 'take-snapshot'*/],
                 showOnMouseEnter: false,
                 width: 500,
-                height: 375,
                 onTakeSnapshot: function() {
                     var canvas = document.createElement('canvas');
                     canvas.width = mediaElement.clientWidth;
@@ -1974,11 +1983,6 @@
                 }
             };
         </script>
-
-
-       
-
-
      
     </article>
 
