--- a/users_manager/static/demo2.css
+++ b/users_manager/static/demo2.css
@@ -18,6 +18,7 @@ html, body {
     color: white !important;
 }
 
+
 .white{
     background-color: white;
     text-indent: 20px;
@@ -32,7 +33,6 @@ html, body {
 .green {
     background-color: green!important;
     margin-right: 1250px !important;
-    font-size: 15px;
 }
 
 .choice {
@@ -42,4 +42,47 @@ html, body {
 
 #createButton{
     margin: 0 100px 500px 0 !important;
+    font-size: 20px!important;
+}
+
+
+* { box-sizing: border-box; }
+
+.wrapper {
+  width: 1300px!important;
+  padding-right: 20px!important;
+}
+
+.searchButton {
+    margin-left: 15px!important;
+}
+
+.row {
+  clear: both!important;
+}
+
+.col {
+  float: left!important;
+  margin-left: 20px!important;
+  width: 60px;
+}
+
+/* Dos columnas de ancho (120px) y un carril (20px) */
+.col.span2 { width: 140px; }
+/* Tres columnas de ancho (180px) y dos carriles (40px) */
+.col.span3 { width: 220px; }
+/* Y asi sucesivamente ... */
+.col.span4 { width: 300px; }
+.col.span5 { width: 380px; }
+.col.span6 { width: 460px; }
+.col.span7 { width: 540px; }
+.col.span8 { width: 620px; }
+.col.span9 { width: 700px; }
+.col.span10 { width: 780px; }
+.col.span11 { width: 860px; }
+.col.span12 { width: 940px; }
+
+.adjust {
+    max-height: 95%;
+    max-width: 95%;
 }
